<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_job_data">

    <fragment
        android:id="@+id/navigation_job_data"
        android:name="com.example.pinhole3.JobDataFragment"
        android:label="@string/title_job_data"
        tools:layout="@layout/fragment_job_data" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pinhole3.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.example.pinhole3.EducationFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_trainings" />
</navigation>